--- a/source/index.html
+++ b/source/index.html
@@ -3,46 +3,46 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Пинк</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<<<<<<< HEAD
 <body class="page__body">
-=======
-<body class="page__body container">
->>>>>>> ca77bfe8db397355c15d1919a3777b7f2a52bf58
   <header class="page-header">
-    <div class="page-header__main-inform">
-      <div class="page-header__head">
-        <a class="page-header__head-logo" href="index.html"> <img src="https://via.placeholder.com/150x150"></a>
-        <button class="page-header__head-toggle" type="button"><span class="visually-hidden">Открыть
-            меню</span></button>
+    <div class="container">
+      <div class="page-header__main-inform">
+        <div class="page-header__head">
+          <a class="page-header__head-logo" href="index.html"> <img src="https://via.placeholder.com/150x150"></a>
+          <button class="page-header__head-toggle" type="button"><span class="visually-hidden">Открыть
+              меню</span></button>
+        </div>
+        <nav class="main-nav">
+          <ul class="main-nav__list">
+            <li class="main-nav__item"><a href="#">Главная</a></li>
+            <li class="main-nav__item"><a href="catalog.html">Фотографии</a></li>
+            <li class="main-nav__item"><a href="form.html">Конкурс</a></li>
+            <li class="main-nav__item"><a href="https://htmlacademy.ru/intensive/adaptive">HTML ACADEMY</a></li>
+          </ul>
+        </nav>
+        <img src="img/hend.png">
+        <p class="page-header__slogan">Взгляни на жизнь иначе!</p>
+        <a href="#" class="page-header__download-button">Скачать приложение</a>
+        <div class="page-header__social">
+          <a href="#" class="page-header__social-apple">
+            <span class="visually-hidden">Скачать для iphone</span>
+          </a>
+          <a href="#" class="page-header__social-android">
+            <span class="visually-hidden">Скачать для android</span>
+          </a>
+          <a href="#" class="page-header__social-windows">
+            <span class="visually-hidden">Скачать для windows-phone</span>
+          </a>
+        </div>
+        <p class="page-header__social-text">
+          Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8
+        </p>
       </div>
-      <nav class="main-nav">
-        <ul class="main-nav__list">
-          <li class="main-nav__item"><a href="#">Главная</a></li>
-          <li class="main-nav__item"><a href="catalog.html">Фотографии</a></li>
-          <li class="main-nav__item"><a href="form.html">Конкурс</a></li>
-          <li class="main-nav__item"><a href="https://htmlacademy.ru/intensive/adaptive">HTML ACADEMY</a></li>
-        </ul>
-      </nav>
-      <p class="page-header__slogan">Взгляни на жизнь иначе!</p>
-      <a href="#" class="page-header__download-button">Скачать приложение</a>
-      <div class="page-header__social">
-        <a href="#" class="page-header__social-apple">
-          <span class="visually-hidden">Скачать для iphone</span>
-        </a>
-        <a href="#" class="page-header__social-android">
-          <span class="visually-hidden">Скачать для android</span>
-        </a>
-        <a href="#" class="page-header__social-windows">
-          <span class="visually-hidden">Скачать для windows-phone</span>
-        </a>
-      </div>
-      <p class="page-header__social-text">
-        Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8
-      </p>
     </div>
   </header>
   <main class="main">
@@ -73,6 +73,7 @@
               новых</p>
           </li>
         </ul>
+        <img src="img/phone-main.png">
       </div>
     </section>
 
@@ -181,7 +182,7 @@
         </li>
       </ul>
       <div class="feedback__map">
-        <img src="https://via.placeholder.com/150x150">
+        <img src="img/map.jpg">
       </div>
     </section>
   </main>
