--- a/source/index.html
+++ b/source/index.html
@@ -10,14 +10,14 @@
 
 <body class="page__body">
   <header class="page-header">
-    <div class="container">
-      <div class="page-header__main-inform">
-        <div class="page-header__head">
-          <a class="page-header__head-logo" href="index.html"> <img src="https://via.placeholder.com/150x150"></a>
+    <div class="page-header__main-inform">
+      <div class="container">
+        <div class="page-header__head page-header__head--over">
+          <a class="page-header__head-logo" href="index.html">PINK</a>
           <button class="page-header__head-toggle" type="button"><span class="visually-hidden">Открыть
               меню</span></button>
         </div>
-        <nav class="main-nav">
+        <nav class="main-nav main-nav--hide">
           <ul class="main-nav__list">
             <li class="main-nav__item"><a href="#">Главная</a></li>
             <li class="main-nav__item"><a href="catalog.html">Фотографии</a></li>
@@ -25,24 +25,28 @@
             <li class="main-nav__item"><a href="https://htmlacademy.ru/intensive/adaptive">HTML ACADEMY</a></li>
           </ul>
         </nav>
-        <img src="img/hend.png">
-        <p class="page-header__slogan">Взгляни на жизнь иначе!</p>
-        <a href="#" class="page-header__download-button">Скачать приложение</a>
-        <div class="page-header__social">
-          <a href="#" class="page-header__social-apple">
-            <span class="visually-hidden">Скачать для iphone</span>
-          </a>
-          <a href="#" class="page-header__social-android">
-            <span class="visually-hidden">Скачать для android</span>
-          </a>
-          <a href="#" class="page-header__social-windows">
-            <span class="visually-hidden">Скачать для windows-phone</span>
-          </a>
-        </div>
-        <p class="page-header__social-text">
-          Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8
-        </p>
       </div>
+      <div class="page-header__slogan page-header__slogan--big">
+        <div class="container">
+          <p class="page-header__slogan-text">Взгляни на жизнь иначе!</p>
+        </div>
+      </div>
+
+      <a href="#" class="page-header__download-button">Скачать приложение</a>
+      <div class="page-header__social">
+        <a href="#" class="page-header__social-apple">
+          <span class="visually-hidden">Скачать для iphone</span>
+        </a>
+        <a href="#" class="page-header__social-android">
+          <span class="visually-hidden">Скачать для android</span>
+        </a>
+        <a href="#" class="page-header__social-windows">
+          <span class="visually-hidden">Скачать для windows-phone</span>
+        </a>
+      </div>
+      <p class="page-header__social-text">
+        Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8
+      </p>
     </div>
   </header>
   <main class="main">
