--- a/source/form.html
+++ b/source/form.html
@@ -11,12 +11,14 @@
 <body class="page__body">
   <header class="page-header">
     <div class="page-header__main-inform">
-      <div class="container">
-        <div class="page-header__head page-header__head--over">
+      <div class="page-header__head">
+        <div class="container">
           <a class="page-header__head-logo" href="index.html">PINK</a>
           <button class="page-header__head-toggle" type="button"><span class="visually-hidden">Открыть
               меню</span></button>
         </div>
+      </div>
+      <div class="container">
         <nav class="main-nav main-nav--hide">
           <ul class="main-nav__list">
             <li class="main-nav__item"><a href="#">Главная</a></li>
@@ -120,7 +122,7 @@
           </div>
         </fieldset>
 
-          <button class="form__button" type="submit">Отправить форму</button>
+        <button class="form__button" type="submit">Отправить форму</button>
 
       </form>
       <div class="container">
