--- a/source/index.html
+++ b/source/index.html
@@ -11,45 +11,46 @@
 <body class="page__body">
   <header class="page-header">
     <div class="page-header__main-inform">
-      <div class="container">
-        <div class="page-header__head page-header__head--over">
+      <div class="page-header__head">
+        <div class="container">
           <a class="page-header__head-logo" href="index.html">PINK</a>
           <button class="page-header__head-toggle" type="button"><span class="visually-hidden">Открыть
               меню</span></button>
         </div>
-        <nav class="main-nav main-nav--hide">
-          <ul class="main-nav__list">
-            <li class="main-nav__item"><a href="#">Главная</a></li>
-            <li class="main-nav__item"><a href="catalog.html">Фотографии</a></li>
-            <li class="main-nav__item"><a href="form.html">Конкурс</a></li>
-            <li class="main-nav__item"><a href="https://htmlacademy.ru/intensive/adaptive">HTML ACADEMY</a></li>
-          </ul>
-        </nav>
       </div>
-      <div class="page-header__slogan page-header__slogan--big">
+      <nav class="main-nav main-nav--hide">
+        <ul class="main-nav__list">
+          <li class="main-nav__item"><a href="#">Главная</a></li>
+          <li class="main-nav__item"><a href="catalog.html">Фотографии</a></li>
+          <li class="main-nav__item"><a href="form.html">Конкурс</a></li>
+          <li class="main-nav__item"><a href="https://htmlacademy.ru/intensive/adaptive">HTML ACADEMY</a></li>
+        </ul>
+      </nav>
+
+      <div class="page-header__slogan">
         <div class="container">
           <p class="page-header__slogan-text">Взгляни на жизнь иначе!</p>
         </div>
       </div>
-
-      <a href="#" class="page-header__download-button">Скачать приложение</a>
-      <div class="page-header__social">
-        <a href="#" class="page-header__social-apple">
-          <span class="visually-hidden">Скачать для iphone</span>
-        </a>
-        <a href="#" class="page-header__social-android">
-          <span class="visually-hidden">Скачать для android</span>
-        </a>
-        <a href="#" class="page-header__social-windows">
-          <span class="visually-hidden">Скачать для windows-phone</span>
-        </a>
-      </div>
-      <p class="page-header__social-text">
-        Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8
-      </p>
+    </div>
+    <a href="#" class="page-header__download-button">Скачать приложение</a>
+    <div class="page-header__social">
+      <a href="#" class="page-header__social-apple">
+        <span class="visually-hidden">Скачать для iphone</span>
+      </a>
+      <a href="#" class="page-header__social-android">
+        <span class="visually-hidden">Скачать для android</span>
+      </a>
+      <a href="#" class="page-header__social-windows">
+        <span class="visually-hidden">Скачать для windows-phone</span>
+      </a>
+    </div>
+    <p class="page-header__social-text">
+      Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8
+    </p>
     </div>
   </header>
-  <main class="main">
+  <main class="page__main">
 
     <h1 class="visually-hidden">PINK Фильтры против серых будней</h1>
 
