--- a/source/form.html
+++ b/source/form.html
@@ -18,19 +18,18 @@
               меню</span></button>
         </div>
       </div>
-      <div class="container">
-        <nav class="main-nav main-nav--hide">
-          <ul class="main-nav__list">
-            <li class="main-nav__item"><a href="#">Главная</a></li>
-            <li class="main-nav__item"><a href="catalog.html">Фотографии</a></li>
-            <li class="main-nav__item"><a href="form.html">Конкурс</a></li>
-            <li class="main-nav__item"><a href="https://htmlacademy.ru/intensive/adaptive">HTML ACADEMY</a></li>
-          </ul>
-        </nav>
-      </div>
-      <div class="page-header__intro">
+      <nav class="main-nav">
+        <ul class="main-nav__list">
+          <li class="main-nav__item"><a href="index.html">Главная</a></li>
+          <li class="main-nav__item"><a href="catalog.html">Фотографии</a></li>
+          <li class="main-nav__item"><a href="#">Конкурс</a></li>
+          <li class="main-nav__item"><a href="https://htmlacademy.ru/intensive/adaptive">HTML ACADEMY</a></li>
+        </ul>
+      </nav>
+
+      <div class="page-header__slogan">
         <div class="container">
-          <h2 class="page-header__intro-heading">Конкурс на самое безбашенное путешествие с Пинк</h2>
+          <p class="page-header__slogan-text">Конкурс на самое безбашенное путешествие с Пинк</p>
         </div>
       </div>
     </div>
