--- a/source/index.html
+++ b/source/index.html
@@ -18,36 +18,45 @@
               меню</span></button>
         </div>
       </div>
-      <nav class="main-nav main-nav--hide">
-        <ul class="main-nav__list">
-          <li class="main-nav__item"><a href="#">Главная</a></li>
-          <li class="main-nav__item"><a href="catalog.html">Фотографии</a></li>
-          <li class="main-nav__item"><a href="form.html">Конкурс</a></li>
-          <li class="main-nav__item"><a href="https://htmlacademy.ru/intensive/adaptive">HTML ACADEMY</a></li>
-        </ul>
+      <nav class="main-nav">
+        <div class="container">
+          <ul class="main-nav__list">
+            <li class="main-nav__item"><a href="#">Главная</a></li>
+            <li class="main-nav__item"><a href="catalog.html">Фотографии</a></li>
+            <li class="main-nav__item"><a href="form.html">Конкурс</a></li>
+            <li class="main-nav__item"><a href="https://htmlacademy.ru/intensive/adaptive">HTML ACADEMY</a></li>
+          </ul>
+        </div>
       </nav>
 
       <div class="page-header__slogan">
-        <div class="container">
-          <p class="page-header__slogan-text">Взгляни на жизнь иначе!</p>
+        <div class="page-header__slogan-phone">
+          <div class="container">
+            <p class="page-header__slogan-text">Взгляни на жизнь иначе!</p>
+          </div>
         </div>
       </div>
     </div>
-    <a href="#" class="page-header__download-button">Скачать приложение</a>
-    <div class="page-header__social">
-      <a href="#" class="page-header__social-apple">
-        <span class="visually-hidden">Скачать для iphone</span>
-      </a>
-      <a href="#" class="page-header__social-android">
-        <span class="visually-hidden">Скачать для android</span>
-      </a>
-      <a href="#" class="page-header__social-windows">
-        <span class="visually-hidden">Скачать для windows-phone</span>
-      </a>
-    </div>
-    <p class="page-header__social-text">
-      Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8
-    </p>
+    <div class="page-header__download-wrap">
+      <div class="container">
+        <div class="page-header__download">
+          <a href="#" class="page-header__download-button">Скачать приложение</a>
+          <div class="page-header__social">
+            <a href="#" class="page-header__social-apple">
+              <span class="visually-hidden">Скачать для iphone</span>
+            </a>
+            <a href="#" class="page-header__social-android">
+              <span class="visually-hidden">Скачать для android</span>
+            </a>
+            <a href="#" class="page-header__social-windows">
+              <span class="visually-hidden">Скачать для windows-phone</span>
+            </a>
+          </div>
+          <p class="page-header__social-text">
+            Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8
+          </p>
+        </div>
+      </div>
     </div>
   </header>
   <main class="page__main">
